--- a/mvvm-foundation/app/build.gradle
+++ b/mvvm-foundation/app/build.gradle
@@ -48,4 +48,6 @@ dependencies {
 
     implementation 'androidx.activity:activity-ktx:1.2.4'
     implementation 'androidx.fragment:fragment-ktx:1.3.6'
+    // coroutines
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.0"
 }
